objects/FscBot_Verification_Code__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Verification Codes</relationshipLabel>
        <relationshipName>Verification_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expires_On__c</fullName>
        <label>Expires On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Method__c</fullName>
        <label>Verification Method</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Verification Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VCO-{0000000}</displayFormat>
        <label>Verification Code Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>